cmake_minimum_required(VERSION 2.8)

project(webrtc-audioproc)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

set(DEFINITIONS "-DWEBRTC_LINUX -DWEBRTC_POSIX -DWEBRTC_NS_FLOAT -DWEBRTC_AEC_DEBUG_DUMP=0 -DWEBRTC_APM_DEBUG_DUMP=0 -DWEBRTC_INTELLIGIBILITY_ENHANCER=0")
#-DWEBRTC_UNTRUSTED_DELAY

add_definitions(${DEFINITIONS})

include_directories(
    webrtc
    webrtc/webrtc/common_audio/signal_processing/include
    webrtc/webrtc/modules/audio_coding/codecs/isac/main/include
)

set(WEBRTC_SRC_
    modules/audio_processing/aec/aec_resampler.cc
    modules/audio_processing/aec/aec_resampler.h
    modules/audio_processing/aec/echo_cancellation.cc
    modules/audio_processing/aec/echo_cancellation.h
    modules/audio_processing/aec3/adaptive_fir_filter.cc
    modules/audio_processing/aec3/adaptive_fir_filter.h
    modules/audio_processing/aec3/aec3_common.cc
    modules/audio_processing/aec3/aec3_common.h
    modules/audio_processing/aec3/aec3_fft.cc
    modules/audio_processing/aec3/aec3_fft.h
    modules/audio_processing/aec3/aec_state.cc
    modules/audio_processing/aec3/aec_state.h
    modules/audio_processing/aec3/block_framer.cc
    modules/audio_processing/aec3/block_framer.h
    modules/audio_processing/aec3/block_processor.cc
    modules/audio_processing/aec3/block_processor.h
    modules/audio_processing/aec3/block_processor_metrics.cc
    modules/audio_processing/aec3/block_processor_metrics.h
    modules/audio_processing/aec3/cascaded_biquad_filter.cc
    modules/audio_processing/aec3/cascaded_biquad_filter.h
    modules/audio_processing/aec3/comfort_noise_generator.cc
    modules/audio_processing/aec3/comfort_noise_generator.h
    modules/audio_processing/aec3/decimator.cc
    modules/audio_processing/aec3/decimator.h
    modules/audio_processing/aec3/delay_estimate.h
    modules/audio_processing/aec3/downsampled_render_buffer.cc
    modules/audio_processing/aec3/downsampled_render_buffer.h
    modules/audio_processing/aec3/echo_canceller3.cc
    modules/audio_processing/aec3/echo_canceller3.h
    modules/audio_processing/aec3/echo_path_delay_estimator.cc
    modules/audio_processing/aec3/echo_path_delay_estimator.h
    modules/audio_processing/aec3/echo_path_variability.cc
    modules/audio_processing/aec3/echo_path_variability.h
    modules/audio_processing/aec3/echo_remover.cc
    modules/audio_processing/aec3/echo_remover.h
    modules/audio_processing/aec3/echo_remover_metrics.cc
    modules/audio_processing/aec3/echo_remover_metrics.h
    modules/audio_processing/aec3/erl_estimator.cc
    modules/audio_processing/aec3/erl_estimator.h
    modules/audio_processing/aec3/erle_estimator.cc
    modules/audio_processing/aec3/erle_estimator.h
    modules/audio_processing/aec3/fft_buffer.cc
    modules/audio_processing/aec3/fft_buffer.h
    modules/audio_processing/aec3/fft_data.h
    modules/audio_processing/aec3/frame_blocker.cc
    modules/audio_processing/aec3/frame_blocker.h
    modules/audio_processing/aec3/main_filter_update_gain.cc
    modules/audio_processing/aec3/main_filter_update_gain.h
    modules/audio_processing/aec3/matched_filter.cc
    modules/audio_processing/aec3/matched_filter.h
    modules/audio_processing/aec3/matched_filter_lag_aggregator.cc
    modules/audio_processing/aec3/matched_filter_lag_aggregator.h
    modules/audio_processing/aec3/matrix_buffer.cc
    modules/audio_processing/aec3/matrix_buffer.h
    modules/audio_processing/aec3/output_selector.cc
    modules/audio_processing/aec3/output_selector.h
    modules/audio_processing/aec3/render_buffer.cc
    modules/audio_processing/aec3/render_buffer.h
    modules/audio_processing/aec3/render_delay_buffer.cc
    modules/audio_processing/aec3/render_delay_buffer.h
    modules/audio_processing/aec3/render_delay_controller.cc
    modules/audio_processing/aec3/render_delay_controller.h
    modules/audio_processing/aec3/render_delay_controller_metrics.cc
    modules/audio_processing/aec3/render_delay_controller_metrics.h
    modules/audio_processing/aec3/render_signal_analyzer.cc
    modules/audio_processing/aec3/render_signal_analyzer.h
    modules/audio_processing/aec3/residual_echo_estimator.cc
    modules/audio_processing/aec3/residual_echo_estimator.h
    modules/audio_processing/aec3/shadow_filter_update_gain.cc
    modules/audio_processing/aec3/shadow_filter_update_gain.h
    modules/audio_processing/aec3/subtractor.cc
    modules/audio_processing/aec3/subtractor.h
    modules/audio_processing/aec3/subtractor_output.h
    modules/audio_processing/aec3/suppression_filter.cc
    modules/audio_processing/aec3/suppression_filter.h
    modules/audio_processing/aec3/suppression_gain.cc
    modules/audio_processing/aec3/suppression_gain.h
    modules/audio_processing/aec3/vector_buffer.cc
    modules/audio_processing/aec3/vector_buffer.h
    modules/audio_processing/aec3/vector_math.h
    modules/audio_processing/agc/agc.cc
    modules/audio_processing/agc/agc.h
    modules/audio_processing/agc/agc_manager_direct.cc
    modules/audio_processing/agc/agc_manager_direct.h
    modules/audio_processing/agc/gain_map_internal.h
    modules/audio_processing/agc/loudness_histogram.cc
    modules/audio_processing/agc/loudness_histogram.h
    modules/audio_processing/agc/utility.cc
    modules/audio_processing/agc/utility.h
    modules/audio_processing/agc2/gain_controller2.cc
    modules/audio_processing/agc2/gain_controller2.h
    modules/audio_processing/audio_buffer.cc
    modules/audio_processing/audio_buffer.h
    modules/audio_processing/audio_processing_impl.cc
    modules/audio_processing/audio_processing_impl.h
    modules/audio_processing/beamformer/array_util.cc
    modules/audio_processing/beamformer/array_util.h
    modules/audio_processing/beamformer/complex_matrix.h
    modules/audio_processing/beamformer/covariance_matrix_generator.cc
    modules/audio_processing/beamformer/covariance_matrix_generator.h
    modules/audio_processing/beamformer/matrix.h
    modules/audio_processing/beamformer/nonlinear_beamformer.cc
    modules/audio_processing/beamformer/nonlinear_beamformer.h
    modules/audio_processing/common.h
    modules/audio_processing/echo_cancellation_impl.cc
    modules/audio_processing/echo_cancellation_impl.h
    modules/audio_processing/echo_control_mobile_impl.cc
    modules/audio_processing/echo_control_mobile_impl.h
    modules/audio_processing/echo_detector/circular_buffer.cc
    modules/audio_processing/echo_detector/circular_buffer.h
    modules/audio_processing/echo_detector/mean_variance_estimator.cc
    modules/audio_processing/echo_detector/mean_variance_estimator.h
    modules/audio_processing/echo_detector/moving_max.cc
    modules/audio_processing/echo_detector/moving_max.h
    modules/audio_processing/echo_detector/normalized_covariance_estimator.cc
    modules/audio_processing/echo_detector/normalized_covariance_estimator.h
    modules/audio_processing/gain_control_for_experimental_agc.cc
    modules/audio_processing/gain_control_for_experimental_agc.h
    modules/audio_processing/gain_control_impl.cc
    modules/audio_processing/gain_control_impl.h
    modules/audio_processing/include/audio_processing.cc
    modules/audio_processing/include/audio_processing.h
    modules/audio_processing/include/config.cc
    modules/audio_processing/include/config.h
    modules/audio_processing/include/echo_control.h
    modules/audio_processing/level_controller/biquad_filter.cc
    modules/audio_processing/level_controller/biquad_filter.h
    modules/audio_processing/level_controller/down_sampler.cc
    modules/audio_processing/level_controller/down_sampler.h
    modules/audio_processing/level_controller/gain_applier.cc
    modules/audio_processing/level_controller/gain_applier.h
    modules/audio_processing/level_controller/gain_selector.cc
    modules/audio_processing/level_controller/gain_selector.h
    modules/audio_processing/level_controller/level_controller.cc
    modules/audio_processing/level_controller/level_controller.h
    modules/audio_processing/level_controller/level_controller_constants.h
    modules/audio_processing/level_controller/noise_level_estimator.cc
    modules/audio_processing/level_controller/noise_level_estimator.h
    modules/audio_processing/level_controller/noise_spectrum_estimator.cc
    modules/audio_processing/level_controller/noise_spectrum_estimator.h
    modules/audio_processing/level_controller/peak_level_estimator.cc
    modules/audio_processing/level_controller/peak_level_estimator.h
    modules/audio_processing/level_controller/saturating_gain_estimator.cc
    modules/audio_processing/level_controller/saturating_gain_estimator.h
    modules/audio_processing/level_controller/signal_classifier.cc
    modules/audio_processing/level_controller/signal_classifier.h
    modules/audio_processing/level_estimator_impl.cc
    modules/audio_processing/level_estimator_impl.h
    modules/audio_processing/low_cut_filter.cc
    modules/audio_processing/low_cut_filter.h
    modules/audio_processing/noise_suppression_impl.cc
    modules/audio_processing/noise_suppression_impl.h
    modules/audio_processing/render_queue_item_verifier.h
    modules/audio_processing/residual_echo_detector.cc
    modules/audio_processing/residual_echo_detector.h
    modules/audio_processing/rms_level.cc
    modules/audio_processing/rms_level.h
    modules/audio_processing/splitting_filter.cc
    modules/audio_processing/splitting_filter.h
    modules/audio_processing/three_band_filter_bank.cc
    modules/audio_processing/three_band_filter_bank.h
    modules/audio_processing/transient/common.h
    modules/audio_processing/transient/daubechies_8_wavelet_coeffs.h
    modules/audio_processing/transient/dyadic_decimator.h
    modules/audio_processing/transient/moving_moments.cc
    modules/audio_processing/transient/moving_moments.h
    modules/audio_processing/transient/transient_detector.cc
    modules/audio_processing/transient/transient_detector.h
    modules/audio_processing/transient/transient_suppressor.cc
    modules/audio_processing/transient/transient_suppressor.h
    modules/audio_processing/transient/wpd_node.cc
    modules/audio_processing/transient/wpd_node.h
    modules/audio_processing/transient/wpd_tree.cc
    modules/audio_processing/transient/wpd_tree.h
    modules/audio_processing/typing_detection.cc
    modules/audio_processing/typing_detection.h
    modules/audio_processing/voice_detection_impl.cc
    modules/audio_processing/voice_detection_impl.h
    modules/audio_processing/aec/aec_common.h
    modules/audio_processing/aec/aec_core.cc
    modules/audio_processing/aec/aec_core.h
    modules/audio_processing/aec/aec_core_optimized_methods.h
    modules/audio_processing/aecm/aecm_core.cc
    modules/audio_processing/aecm/aecm_core_c.cc
    modules/audio_processing/aecm/aecm_core.h
    modules/audio_processing/aecm/aecm_defines.h
    modules/audio_processing/aecm/echo_control_mobile.cc
    modules/audio_processing/aecm/echo_control_mobile.h
    modules/audio_processing/utility/block_mean_calculator.cc
    modules/audio_processing/utility/block_mean_calculator.h
    modules/audio_processing/utility/delay_estimator.cc
    modules/audio_processing/utility/delay_estimator.h
    modules/audio_processing/utility/delay_estimator_internal.h
    modules/audio_processing/utility/delay_estimator_wrapper.cc
    modules/audio_processing/utility/delay_estimator_wrapper.h
    modules/audio_processing/utility/ooura_fft.cc
    modules/audio_processing/utility/ooura_fft.h
    modules/audio_processing/utility/ooura_fft_tables_common.h
    modules/audio_processing/ns/defines.h
    modules/audio_processing/ns/noise_suppression.c
    modules/audio_processing/ns/noise_suppression.h
    modules/audio_processing/ns/ns_core.c
    modules/audio_processing/ns/ns_core.h
    modules/audio_processing/ns/windows_private.h
    modules/audio_processing/agc/legacy/analog_agc.c
    modules/audio_processing/agc/legacy/analog_agc.h
    modules/audio_processing/agc/legacy/digital_agc.c
    modules/audio_processing/agc/legacy/digital_agc.h
    modules/audio_processing/agc/legacy/gain_control.h
    modules/audio_processing/logging/apm_data_dumper.cc
    modules/audio_processing/logging/apm_data_dumper.h
    modules/audio_processing/aec/aec_common.h
    modules/audio_processing/aec/aec_core.cc
    modules/audio_processing/aec/aec_core.h
    modules/audio_processing/aec/aec_core_optimized_methods.h
    modules/audio_processing/aecm/aecm_core.cc
    modules/audio_processing/aecm/aecm_core.h
    modules/audio_processing/aecm/aecm_defines.h
    modules/audio_processing/aecm/echo_control_mobile.cc
    modules/audio_processing/aecm/echo_control_mobile.h
    modules/audio_processing/utility/block_mean_calculator.cc
    modules/audio_processing/utility/block_mean_calculator.h
    modules/audio_processing/utility/delay_estimator.cc
    modules/audio_processing/utility/delay_estimator.h
    modules/audio_processing/utility/delay_estimator_internal.h
    modules/audio_processing/utility/delay_estimator_wrapper.cc
    modules/audio_processing/utility/delay_estimator_wrapper.h
    modules/audio_processing/utility/ooura_fft.cc
    modules/audio_processing/utility/ooura_fft.h
    modules/audio_processing/utility/ooura_fft_tables_common.h
    modules/audio_processing/agc/legacy/analog_agc.c
    modules/audio_processing/agc/legacy/analog_agc.h
    modules/audio_processing/agc/legacy/digital_agc.c
    modules/audio_processing/agc/legacy/digital_agc.h
    modules/audio_processing/agc/legacy/gain_control.h
    modules/audio_processing/aec/aec_core_sse2.cc
    modules/audio_processing/utility/ooura_fft_sse2.cc
    modules/audio_processing/utility/ooura_fft_tables_neon_sse2.h
    modules/audio_processing/include/audio_processing_statistics.cc
    modules/audio_processing/include/audio_processing_statistics.h
    modules/audio_processing/include/audio_processing.cc
    
    modules/audio_processing/vad/common.h
    modules/audio_processing/vad/gmm.cc
    modules/audio_processing/vad/gmm.h
    modules/audio_processing/vad/noise_gmm_tables.h
    modules/audio_processing/vad/pitch_based_vad.cc
    modules/audio_processing/vad/pitch_based_vad.h
    modules/audio_processing/vad/pitch_internal.cc
    modules/audio_processing/vad/pitch_internal.h
    modules/audio_processing/vad/pole_zero_filter.cc
    modules/audio_processing/vad/pole_zero_filter.h
    modules/audio_processing/vad/standalone_vad.cc
    modules/audio_processing/vad/standalone_vad.h
    modules/audio_processing/vad/vad_audio_proc.cc
    modules/audio_processing/vad/vad_audio_proc.h
    modules/audio_processing/vad/vad_audio_proc_internal.h
    modules/audio_processing/vad/vad_circular_buffer.cc
    modules/audio_processing/vad/vad_circular_buffer.h
    modules/audio_processing/vad/voice_activity_detector.cc
    modules/audio_processing/vad/voice_activity_detector.h
    modules/audio_processing/vad/voice_gmm_tables.h
    modules/audio_processing/include/aec_dump.cc
    modules/audio_processing/include/aec_dump.h
    
    modules/audio_coding/codecs/isac/main/source/intialize.c
    modules/audio_coding/codecs/isac/main/source/pitch_estimator.c
    modules/audio_coding/codecs/isac/main/source/filter_functions.c
    modules/audio_coding/codecs/isac/main/source/filterbanks.c
    modules/audio_coding/codecs/isac/main/source/filterbank_tables.c
    modules/audio_coding/codecs/isac/main/source/pitch_filter.c
    modules/audio_coding/codecs/isac/main/source/lpc_analysis.c
   
    system_wrappers/include/aligned_array.h
    system_wrappers/include/aligned_malloc.h
    system_wrappers/include/clock.h
    system_wrappers/include/cpu_info.h
    system_wrappers/include/event_wrapper.h
    system_wrappers/include/file_wrapper.h
    system_wrappers/include/ntp_time.h
    system_wrappers/include/rtp_to_ntp_estimator.h
    system_wrappers/include/rw_lock_wrapper.h
    system_wrappers/include/sleep.h
    system_wrappers/include/timestamp_extrapolator.h
    system_wrappers/source/aligned_malloc.cc
    system_wrappers/source/clock.cc
    system_wrappers/source/cpu_features.cc
    system_wrappers/source/cpu_info.cc
    system_wrappers/source/event.cc
    system_wrappers/source/event_timer_posix.cc
    system_wrappers/source/event_timer_posix.h
    system_wrappers/source/file_impl.cc
    system_wrappers/source/rtp_to_ntp_estimator.cc
    system_wrappers/source/rw_lock.cc
    system_wrappers/source/rw_lock_posix.cc
    system_wrappers/source/rw_lock_posix.h
    system_wrappers/source/sleep.cc
    system_wrappers/source/timestamp_extrapolator.cc
    system_wrappers/include/metrics_default.h
    system_wrappers/source/metrics_default.cc
    
    common_types.cc
    common_types.h
    rtc_base/checks.cc
    rtc_base/criticalsection.cc
    rtc_base/event.cc
    rtc_base/event_tracer.cc
    rtc_base/logging.cc
    rtc_base/platform_file.cc
    rtc_base/platform_thread.cc
    rtc_base/stringencode.cc
    rtc_base/thread_checker_impl.cc
    rtc_base/timeutils.cc
    rtc_base/race_checker.cc
    
    common_audio/audio_converter.cc
    common_audio/audio_converter.h
    common_audio/audio_ring_buffer.cc
    common_audio/audio_ring_buffer.h
    common_audio/audio_util.cc
    common_audio/blocker.cc
    common_audio/blocker.h
    common_audio/channel_buffer.cc
    common_audio/channel_buffer.h
    common_audio/include/audio_util.h
    common_audio/lapped_transform.cc
    common_audio/lapped_transform.h
    common_audio/real_fourier.cc
    common_audio/real_fourier.h
    common_audio/real_fourier_ooura.cc
    common_audio/real_fourier_ooura.h
    common_audio/resampler/include/push_resampler.h
    common_audio/resampler/include/resampler.h
    common_audio/resampler/push_resampler.cc
    common_audio/resampler/push_sinc_resampler.cc
    common_audio/resampler/push_sinc_resampler.h
    common_audio/resampler/resampler.cc
    common_audio/resampler/sinc_resampler.cc
    common_audio/smoothing_filter.cc
    common_audio/smoothing_filter.h
    common_audio/sparse_fir_filter.cc
    common_audio/sparse_fir_filter.h
    common_audio/vad/include/vad.h
    common_audio/vad/vad.cc
    common_audio/wav_file.cc
    common_audio/wav_file.h
    common_audio/wav_header.cc
    common_audio/wav_header.h
    common_audio/window_generator.cc
    common_audio/window_generator.h
    common_audio/signal_processing/dot_product_with_scale.cc
    common_audio/signal_processing/dot_product_with_scale.h
    common_audio/fft4g.c
    common_audio/fft4g.h
    common_audio/ring_buffer.c
    common_audio/ring_buffer.h
    common_audio/signal_processing/auto_corr_to_refl_coef.c
    common_audio/signal_processing/auto_correlation.c
    common_audio/signal_processing/complex_fft_tables.h
    common_audio/signal_processing/copy_set_operations.c
    common_audio/signal_processing/cross_correlation.c
    common_audio/signal_processing/division_operations.c
    common_audio/signal_processing/downsample_fast.c
    common_audio/signal_processing/energy.c
    common_audio/signal_processing/filter_ar.c
    common_audio/signal_processing/filter_ma_fast_q12.c
    common_audio/signal_processing/get_hanning_window.c
    common_audio/signal_processing/get_scaling_square.c
    common_audio/signal_processing/ilbc_specific_functions.c
    common_audio/signal_processing/include/real_fft.h
    common_audio/signal_processing/include/signal_processing_library.h
    common_audio/signal_processing/include/spl_inl.h
    common_audio/signal_processing/include/spl_inl_armv7.h
    common_audio/signal_processing/levinson_durbin.c
    common_audio/signal_processing/lpc_to_refl_coef.c
    common_audio/signal_processing/min_max_operations.c
    common_audio/signal_processing/randomization_functions.c
    common_audio/signal_processing/real_fft.c
    common_audio/signal_processing/refl_coef_to_lpc.c
    common_audio/signal_processing/resample.c
    common_audio/signal_processing/resample_48khz.c
    common_audio/signal_processing/resample_by_2.c
    common_audio/signal_processing/resample_by_2_internal.c
    common_audio/signal_processing/resample_by_2_internal.h
    common_audio/signal_processing/resample_fractional.c
    common_audio/signal_processing/spl_init.c
    common_audio/signal_processing/spl_inl.c
    common_audio/signal_processing/spl_sqrt.c
    common_audio/signal_processing/splitting_filter.c
    common_audio/signal_processing/sqrt_of_one_minus_x_squared.c
    common_audio/signal_processing/vector_scaling_operations.c
    common_audio/vad/include/webrtc_vad.h
    common_audio/vad/vad_core.c
    common_audio/vad/vad_core.h
    common_audio/vad/vad_filterbank.c
    common_audio/vad/vad_filterbank.h
    common_audio/vad/vad_gmm.c
    common_audio/vad/vad_gmm.h
    common_audio/vad/vad_sp.c
    common_audio/vad/vad_sp.h
    common_audio/vad/webrtc_vad.c
    common_audio/fir_filter_sse.cc
    common_audio/fir_filter_sse.h
    common_audio/resampler/sinc_resampler_sse.cc
    common_audio/signal_processing/complex_fft.c
    common_audio/signal_processing/complex_bit_reverse.c
    common_audio/signal_processing/filter_ar_fast_q12.c
    common_audio/signal_processing/spl_sqrt_floor.c
    common_audio/fir_filter_c.cc
    common_audio/fir_filter_c.h
    common_audio/fir_filter_factory.cc
    common_audio/fir_filter_factory.h
    
    api/optional.cc
    api/optional.h
)


set(WEBRTC_INCLUDE_
    modules/audio_processing/aec/aec_resampler.h
    modules/audio_processing/aec/echo_cancellation.h
    modules/audio_processing/aec3/adaptive_fir_filter.h
    modules/audio_processing/aec3/aec3_common.h
    modules/audio_processing/aec3/aec3_fft.h
    modules/audio_processing/aec3/aec_state.h
    modules/audio_processing/aec3/block_framer.h
    modules/audio_processing/aec3/block_processor.h
    modules/audio_processing/aec3/block_processor_metrics.h
    modules/audio_processing/aec3/cascaded_biquad_filter.h
    modules/audio_processing/aec3/comfort_noise_generator.h
    modules/audio_processing/aec3/decimator.h
    modules/audio_processing/aec3/delay_estimate.h
    modules/audio_processing/aec3/downsampled_render_buffer.h
    modules/audio_processing/aec3/echo_canceller3.h
    modules/audio_processing/aec3/echo_path_delay_estimator.h
    modules/audio_processing/aec3/echo_path_variability.h
    modules/audio_processing/aec3/echo_remover.h
    modules/audio_processing/aec3/echo_remover_metrics.h
    modules/audio_processing/aec3/erl_estimator.h
    modules/audio_processing/aec3/erle_estimator.h
    modules/audio_processing/aec3/fft_buffer.h
    modules/audio_processing/aec3/fft_data.h
    modules/audio_processing/aec3/frame_blocker.h
    modules/audio_processing/aec3/main_filter_update_gain.h
    modules/audio_processing/aec3/matched_filter.h
    modules/audio_processing/aec3/matched_filter_lag_aggregator.h
    modules/audio_processing/aec3/matrix_buffer.h
    modules/audio_processing/aec3/output_selector.h
    modules/audio_processing/aec3/render_buffer.h
    modules/audio_processing/aec3/render_delay_buffer.h
    modules/audio_processing/aec3/render_delay_controller.h
    modules/audio_processing/aec3/render_delay_controller_metrics.h
    modules/audio_processing/aec3/render_signal_analyzer.h
    modules/audio_processing/aec3/residual_echo_estimator.h
    modules/audio_processing/aec3/shadow_filter_update_gain.h
    modules/audio_processing/aec3/subtractor.h
    modules/audio_processing/aec3/subtractor_output.h
    modules/audio_processing/aec3/suppression_filter.h
    modules/audio_processing/aec3/suppression_gain.h
    modules/audio_processing/aec3/vector_buffer.h
    modules/audio_processing/aec3/vector_math.h
    modules/audio_processing/agc/agc.h
    modules/audio_processing/agc/agc_manager_direct.h
    modules/audio_processing/agc/gain_map_internal.h
    modules/audio_processing/agc/loudness_histogram.h
    modules/audio_processing/agc/utility.h
    modules/audio_processing/agc2/gain_controller2.h
    modules/audio_processing/audio_buffer.h
    modules/audio_processing/audio_processing_impl.h
    modules/audio_processing/beamformer/array_util.h
    modules/audio_processing/beamformer/complex_matrix.h
    modules/audio_processing/beamformer/covariance_matrix_generator.h
    modules/audio_processing/beamformer/matrix.h
    modules/audio_processing/beamformer/nonlinear_beamformer.h
    modules/audio_processing/common.h
    modules/audio_processing/echo_cancellation_impl.h
    modules/audio_processing/echo_control_mobile_impl.h
    modules/audio_processing/echo_detector/circular_buffer.h
    modules/audio_processing/echo_detector/mean_variance_estimator.h
    modules/audio_processing/echo_detector/moving_max.h
    modules/audio_processing/echo_detector/normalized_covariance_estimator.h
    modules/audio_processing/gain_control_for_experimental_agc.h
    modules/audio_processing/gain_control_impl.h
    modules/audio_processing/include/audio_processing.h
    modules/audio_processing/include/config.h
    modules/audio_processing/include/echo_control.h
    modules/audio_processing/level_controller/biquad_filter.h
    modules/audio_processing/level_controller/down_sampler.h
    modules/audio_processing/level_controller/gain_applier.h
    modules/audio_processing/level_controller/gain_selector.h
    modules/audio_processing/level_controller/level_controller.h
    modules/audio_processing/level_controller/level_controller_constants.h
    modules/audio_processing/level_controller/noise_level_estimator.h
    modules/audio_processing/level_controller/noise_spectrum_estimator.h
    modules/audio_processing/level_controller/peak_level_estimator.h
    modules/audio_processing/level_controller/saturating_gain_estimator.h
    modules/audio_processing/level_controller/signal_classifier.h
    modules/audio_processing/level_estimator_impl.h
    modules/audio_processing/low_cut_filter.h
    modules/audio_processing/noise_suppression_impl.h
    modules/audio_processing/render_queue_item_verifier.h
    modules/audio_processing/residual_echo_detector.h
    modules/audio_processing/rms_level.h
    modules/audio_processing/splitting_filter.h
    modules/audio_processing/three_band_filter_bank.h
    modules/audio_processing/transient/common.h
    modules/audio_processing/transient/daubechies_8_wavelet_coeffs.h
    modules/audio_processing/transient/dyadic_decimator.h
    modules/audio_processing/transient/moving_moments.h
    modules/audio_processing/transient/transient_detector.h
    modules/audio_processing/transient/transient_suppressor.h
    modules/audio_processing/transient/wpd_node.h
    modules/audio_processing/transient/wpd_tree.h
    modules/audio_processing/typing_detection.h
    modules/audio_processing/voice_detection_impl.h
    modules/audio_processing/aec/aec_common.h
    modules/audio_processing/aec/aec_core.h
    modules/audio_processing/aec/aec_core_optimized_methods.h
    modules/audio_processing/aecm/aecm_core.h
    modules/audio_processing/aecm/aecm_defines.h
    modules/audio_processing/aecm/echo_control_mobile.h
    modules/audio_processing/utility/block_mean_calculator.h
    modules/audio_processing/utility/delay_estimator.h
    modules/audio_processing/utility/delay_estimator_internal.h
    modules/audio_processing/utility/delay_estimator_wrapper.h
    modules/audio_processing/utility/ooura_fft.h
    modules/audio_processing/utility/ooura_fft_tables_common.h
    modules/audio_processing/ns/defines.h
    modules/audio_processing/ns/noise_suppression.h
    modules/audio_processing/ns/ns_core.h
    modules/audio_processing/ns/windows_private.h
    modules/audio_processing/agc/legacy/analog_agc.h
    modules/audio_processing/agc/legacy/digital_agc.h
    modules/audio_processing/agc/legacy/gain_control.h
    modules/audio_processing/logging/apm_data_dumper.h
    modules/audio_processing/aec/aec_common.h
    modules/audio_processing/aec/aec_core.h
    modules/audio_processing/aec/aec_core_optimized_methods.h
    modules/audio_processing/aecm/aecm_core.h
    modules/audio_processing/aecm/aecm_defines.h
    modules/audio_processing/aecm/echo_control_mobile.h
    modules/audio_processing/utility/block_mean_calculator.h
    modules/audio_processing/utility/delay_estimator.h
    modules/audio_processing/utility/delay_estimator_internal.h
    modules/audio_processing/utility/delay_estimator_wrapper.h
    modules/audio_processing/utility/ooura_fft.h
    modules/audio_processing/utility/ooura_fft_tables_common.h
    modules/audio_processing/agc/legacy/analog_agc.h
    modules/audio_processing/agc/legacy/digital_agc.h
    modules/audio_processing/agc/legacy/gain_control.h
    modules/audio_processing/utility/ooura_fft_tables_neon_sse2.h
    modules/audio_processing/include/audio_processing_statistics.h
    modules/audio_processing/vad/common.h
    modules/audio_processing/vad/gmm.h
    modules/audio_processing/vad/noise_gmm_tables.h
    modules/audio_processing/vad/pitch_based_vad.h
    modules/audio_processing/vad/pitch_internal.h
    modules/audio_processing/vad/pole_zero_filter.h
    modules/audio_processing/vad/standalone_vad.h
    modules/audio_processing/vad/vad_audio_proc.h
    modules/audio_processing/vad/vad_audio_proc_internal.h
    modules/audio_processing/vad/vad_circular_buffer.h
    modules/audio_processing/vad/voice_activity_detector.h
    modules/audio_processing/vad/voice_gmm_tables.h
    modules/audio_processing/include/aec_dump.h
    system_wrappers/include/aligned_array.h
    system_wrappers/include/aligned_malloc.h
    system_wrappers/include/clock.h
    system_wrappers/include/cpu_info.h
    system_wrappers/include/event_wrapper.h
    system_wrappers/include/file_wrapper.h
    system_wrappers/include/ntp_time.h
    system_wrappers/include/rtp_to_ntp_estimator.h
    system_wrappers/include/rw_lock_wrapper.h
    system_wrappers/include/sleep.h
    system_wrappers/include/timestamp_extrapolator.h
    system_wrappers/source/event_timer_posix.h
    system_wrappers/source/rw_lock_posix.h
    system_wrappers/include/metrics_default.h
    common_types.h
    common_audio/audio_converter.h
    common_audio/audio_ring_buffer.h
    common_audio/blocker.h
    common_audio/channel_buffer.h
    common_audio/include/audio_util.h
    common_audio/lapped_transform.h
    common_audio/real_fourier.h
    common_audio/real_fourier_ooura.h
    common_audio/resampler/include/push_resampler.h
    common_audio/resampler/include/resampler.h
    common_audio/resampler/push_sinc_resampler.h
    common_audio/smoothing_filter.h
    common_audio/sparse_fir_filter.h
    common_audio/vad/include/vad.h
    common_audio/wav_file.h
    common_audio/wav_header.h
    common_audio/window_generator.h
    common_audio/signal_processing/dot_product_with_scale.h
    common_audio/fft4g.h
    common_audio/ring_buffer.h
    common_audio/signal_processing/complex_fft_tables.h
    common_audio/signal_processing/include/real_fft.h
    common_audio/signal_processing/include/signal_processing_library.h
    common_audio/signal_processing/include/spl_inl.h
    common_audio/signal_processing/include/spl_inl_armv7.h
    common_audio/signal_processing/resample_by_2_internal.h
    common_audio/vad/include/webrtc_vad.h
    common_audio/vad/vad_core.h
    common_audio/vad/vad_filterbank.h
    common_audio/vad/vad_gmm.h
    common_audio/vad/vad_sp.h
    common_audio/fir_filter_sse.h
    common_audio/fir_filter_c.h
    common_audio/fir_filter_factory.h
    api/optional.h
    api/array_view.h
    rtc_base/checks.h
    typedefs.h
    rtc_base/arraysize.h
    rtc_base/asyncinvoker.h
    rtc_base/asyncinvoker-inl.h
    rtc_base/asyncpacketsocket.h
    rtc_base/asyncresolverinterface.h
    rtc_base/asyncsocket.h
    rtc_base/asynctcpsocket.h
    rtc_base/asyncudpsocket.h
    rtc_base/atomicops.h
    rtc_base/base64.h
    rtc_base/basictypes.h
    rtc_base/bind.h
    rtc_base/bitbuffer.h
    rtc_base/bitrateallocationstrategy.h
    rtc_base/buffer.h
    rtc_base/bufferqueue.h
    rtc_base/bytebuffer.h
    rtc_base/byteorder.h
    rtc_base/callback.h
    rtc_base/checks.h
    rtc_base/compile_assert_c.h
    rtc_base/constructormagic.h
    rtc_base/copyonwritebuffer.h
    rtc_base/cpu_time.h
    rtc_base/crc32.h
    rtc_base/criticalsection.h
    rtc_base/cryptstring.h
    rtc_base/deprecation.h
    rtc_base/dscp.h
    rtc_base/event.h
    rtc_base/event_tracer.h
    rtc_base/fakeclock.h
    rtc_base/fakenetwork.h
    rtc_base/fakesslidentity.h
    rtc_base/file.h
    rtc_base/filerotatingstream.h
    rtc_base/fileutils.h
    rtc_base/firewallsocketserver.h
    rtc_base/flags.h
    rtc_base/format_macros.h
    rtc_base/function_view.h
    rtc_base/gtest_prod_util.h
    rtc_base/gunit.h
    rtc_base/gunit_prod.h
    rtc_base/helpers.h
    rtc_base/httpbase.h
    rtc_base/httpcommon.h
    rtc_base/httpcommon-inl.h
    rtc_base/httpserver.h
    rtc_base/ifaddrs-android.h
    rtc_base/ifaddrs_converter.h
    rtc_base/ignore_wundef.h
    rtc_base/ipaddress.h
    rtc_base/json.h
    rtc_base/keep_ref_until_done.h
    rtc_base/location.h
    rtc_base/logging.h
    rtc_base/logsinks.h
    rtc_base/macutils.h
    rtc_base/md5digest.h
    rtc_base/md5.h
    rtc_base/memory_usage.h
    rtc_base/messagedigest.h
    rtc_base/messagehandler.h
    rtc_base/messagequeue.h
    rtc_base/natserver.h
    rtc_base/natsocketfactory.h
    rtc_base/nattypes.h
    rtc_base/nethelper.h
    rtc_base/nethelpers.h
    rtc_base/network_constants.h
    rtc_base/network.h
    rtc_base/networkmonitor.h
    rtc_base/networkroute.h
    rtc_base/nullsocketserver.h
    rtc_base/onetimeevent.h
    rtc_base/openssladapter.h
    rtc_base/openssldigest.h
    rtc_base/openssl.h
    rtc_base/opensslidentity.h
    rtc_base/opensslstreamadapter.h
    rtc_base/optionsfile.h
    rtc_base/pathutils.h
    rtc_base/physicalsocketserver.h
    rtc_base/platform_file.h
    rtc_base/platform_thread.h
    rtc_base/platform_thread_types.h
    rtc_base/protobuf_utils.h
    rtc_base/proxyinfo.h
    rtc_base/proxyserver.h
    rtc_base/ptr_util.h
    rtc_base/race_checker.h
    rtc_base/random.h
    rtc_base/rate_limiter.h
    rtc_base/ratelimiter.h
    rtc_base/rate_statistics.h
    rtc_base/ratetracker.h
    rtc_base/refcountedobject.h
    rtc_base/refcounter.h
    rtc_base/refcount.h
    rtc_base/rollingaccumulator.h
    rtc_base/rtccertificategenerator.h
    rtc_base/rtccertificate.h
    rtc_base/sanitizer.h
    rtc_base/scoped_ref_ptr.h
    rtc_base/sequenced_task_checker.h
    rtc_base/sequenced_task_checker_impl.h
    rtc_base/sha1digest.h
    rtc_base/sha1.h
    rtc_base/signalthread.h
    rtc_base/sigslot.h
    rtc_base/sigslotrepeater.h
    rtc_base/sigslottester.h
    rtc_base/socketadapters.h
    rtc_base/socketaddress.h
    rtc_base/socketaddresspair.h
    rtc_base/socketfactory.h
    rtc_base/socket.h
    rtc_base/socketserver.h
    rtc_base/socketstream.h
    rtc_base/socket_unittest.h
    rtc_base/ssladapter.h
    rtc_base/sslfingerprint.h
    rtc_base/sslidentity.h
    rtc_base/sslroots.h
    rtc_base/sslstreamadapter.h
    rtc_base/stream.h
    rtc_base/stringencode.h
    rtc_base/stringize_macros.h
    rtc_base/string_to_number.h
    rtc_base/stringutils.h
    rtc_base/swap_queue.h
    rtc_base/task_queue.h
    rtc_base/task_queue_posix.h
    rtc_base/template_util.h
    rtc_base/testbase64.h
    rtc_base/testclient.h
    rtc_base/testechoserver.h
    rtc_base/testutils.h
    rtc_base/thread_annotations.h
    rtc_base/thread_checker.h
    rtc_base/thread_checker_impl.h
    rtc_base/thread.h
    rtc_base/timedelta.h
    rtc_base/timestampaligner.h
    rtc_base/timeutils.h
    rtc_base/trace_event.h
    rtc_base/transformadapter.h
    rtc_base/type_traits.h
    rtc_base/unixfilesystem.h
    rtc_base/virtualsocketserver.h
    rtc_base/weak_ptr.h
    rtc_base/zero_memory.h
    modules/include/module_common_types.h

    api/array_view.h
    api/audio_options.h
    api/candidate.h
    api/cryptoparams.h
    api/datachannelinterface.h
    api/dtmfsenderinterface.h
    api/fakemetricsobserver.h
    api/fec_controller.h
    api/jsep.h
    api/jsepicecandidate.h
    api/jsepsessiondescription.h
    api/mediaconstraintsinterface.h
    api/mediastreaminterface.h
    api/mediastreamproxy.h
    api/mediastreamtrackproxy.h
    api/mediatypes.h
    api/notifier.h
    api/optional.h
    api/peerconnectionfactoryproxy.h
    api/peerconnectioninterface.h
    api/peerconnectionproxy.h
    api/proxy.h
    api/refcountedbase.h
    api/rtcerror.h
    api/rtceventlogoutput.h
    api/rtp_headers.h
    api/rtpparameters.h
    api/rtpreceiverinterface.h
    api/rtpsenderinterface.h
    api/rtptransceiverinterface.h
    api/setremotedescriptionobserverinterface.h
    api/statstypes.h
    api/turncustomizer.h
    api/umametrics.h
    api/videosinkinterface.h
    api/videosourceinterface.h
    api/videosourceproxy.h
    api/video/i420_buffer.h
    api/video/video_content_type.h
    api/video/video_frame_buffer.h
    api/video/video_frame.h
    api/video/video_rotation.h
    api/video/video_timing.h
    rtc_base/numerics/exp_filter.h
    rtc_base/numerics/histogram_percentile_counter.h
    rtc_base/numerics/mathutils.h
    rtc_base/numerics/mod_ops.h
    rtc_base/numerics/moving_max_counter.h
    rtc_base/numerics/moving_median_filter.h
    rtc_base/numerics/percentile_filter.h
    rtc_base/numerics/safe_compare.h
    rtc_base/numerics/safe_conversions.h
    rtc_base/numerics/safe_conversions_impl.h
    rtc_base/numerics/safe_minmax.h
    rtc_base/numerics/sequence_number_util.h
    modules/include/module_common_types.h
    modules/include/module_common_types_public.h
    modules/include/module.h
    modules/video_coding/codecs/h264/include/h264_globals.h
    modules/video_coding/codecs/vp8/include/vp8_globals.h
    modules/video_coding/codecs/vp9/include/vp9_globals.h
    modules/video_coding/codecs/interface/common_constants.h
    modules/audio_processing/audio_buffer.h
)

function(prepend_path var prefix)
   set(listVar "")
   foreach(f ${ARGN})
      list(APPEND listVar "${prefix}/${f}")
   endforeach(f)
   set(${var} "${listVar}" PARENT_SCOPE)
endfunction(prepend_path)

prepend_path(WEBRTC_SRC webrtc ${WEBRTC_SRC_})
prepend_path(WEBRTC_INCLUDE webrtc ${WEBRTC_INCLUDE_})

add_library(webrtc-audioproc SHARED ${WEBRTC_SRC})
target_link_libraries(webrtc-audioproc pthread)

set(INCLUDE_INSTALL_DIR include)
set(LIB_INSTALL_DIR lib)

install(TARGETS webrtc-audioproc DESTINATION ${LIB_INSTALL_DIR})

foreach (file ${WEBRTC_INCLUDE})
    get_filename_component( dir ${file} DIRECTORY)
    install(FILES ${file} DESTINATION ${INCLUDE_INSTALL_DIR}/${dir})
endforeach()


include(CMakePackageConfigHelpers)

configure_package_config_file(webrtc-audioprocConfig.cmake.in
  ${CMAKE_CURRENT_BINARY_DIR}/webrtc-audioprocConfig.cmake
  INSTALL_DESTINATION ${LIB_INSTALL_DIR}/cmake/webrtc-audioproc
  PATH_VARS INCLUDE_INSTALL_DIR LIB_INSTALL_DIR
  )
  
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/webrtc-audioprocConfig.cmake" DESTINATION lib/cmake/webrtc-audioproc)
